cmake_minimum_required(VERSION 2.8.9)

project (VFS)

SET(XPLM_SDK_ROOT "${PROJECT_SOURCE_DIR}/external/SDK")
SET(XPLM_SDK_ROOT_HEADER "${XPLM_SDK_ROOT}/CHeaders")
SET(XPLM_SDK_ROOT_HEADER_WIDGET "${XPLM_SDK_ROOT_HEADER}/Widgets")
SET(XPLM_SDK_ROOT_HEADER_WRAPPER "${XPLM_SDK_ROOT_HEADER}/Wrappers")
SET(XPLM_SDK_ROOT_HEADER_XPLM "${XPLM_SDK_ROOT_HEADER}/XPLM")
SET(XPLM_SDK_LIBS ${XPLM_SDK_ROOT}/Libraries/Win)

message(STATUS "PROJECT_SOURCE_DIR:"  ${PROJECT_SOURCE_DIR})
message(STATUS "XPLM_SDK_ROOT:"  ${XPLM_SDK_ROOT})
message(STATUS "XPLM_SDK_ROOT_HEADER:"  ${XPLM_SDK_ROOT_HEADER})
message(STATUS "XPLM_SDK_ROOT_HEADER_WIDGET:"  ${XPLM_SDK_ROOT_HEADER_WIDGET})
message(STATUS "XPLM_SDK_ROOT_HEADER_WRAPPER:"  ${XPLM_SDK_ROOT_HEADER_WRAPPER})
message(STATUS "XPLM_SDK_ROOT_HEADER_XPLM:"  ${XPLM_SDK_ROOT_HEADER_XPLM})
message(STATUS "XPLM_SDK_LIBS:"  ${XPLM_SDK_LIBS})

SET(OPENAL_ROOT "${PROJECT_SOURCE_DIR}/external/OpenAL")
SET(OPENAL_INCLUDE_DIR "${OPENAL_ROOT}/include")
SET(OPENAL_LIB_DIR "${OPENAL_ROOT}/libs/Win64")

message(STATUS "OPENAL_LIB_DIR:"  ${OPENAL_LIB_DIR})

SET(LUA_ROOT ${PROJECT_SOURCE_DIR}/external/lua-5.3.5/)
SET(LUA_SRC ${LUA_ROOT}/src)

add_definitions(-DSIMDATA_EXPORTS)
add_definitions(-DIBM=1)
add_definitions(-DXPLM200=1)
add_definitions(-DXPLM300=1)
add_definitions(-DXPLM301=1)
add_definitions(-DXPLM210=1)

include_directories(${XPLM_SDK_ROOT_HEADER_WIDGET} ${XPLM_SDK_ROOT_HEADER_WRAPPER} ${XPLM_SDK_ROOT_HEADER_XPLM} ${OPENAL_INCLUDE_DIR} ${LUA_SRC})
link_directories(${XPLM_SDK_LIBS})
link_directories(${OPENAL_LIB_DIR})


add_subdirectory(${LUA_ROOT})

