cmake_minimum_required(VERSION 2.8.9)

project (VFS)

SET(XPLM_SDK_ROOT "${PROJECT_SOURCE_DIR}/external/SDK")
SET(XPLM_SDK_ROOT_HEADER "${XPLM_SDK_ROOT}/CHeaders")
SET(XPLM_SDK_ROOT_HEADER_WIDGET "${XPLM_SDK_ROOT_HEADER}/Widgets")
SET(XPLM_SDK_ROOT_HEADER_WRAPPER "${XPLM_SDK_ROOT_HEADER}/Wrappers")
SET(XPLM_SDK_ROOT_HEADER_XPLM "${XPLM_SDK_ROOT_HEADER}/XPLM")
SET(XPLM_SDK_LIBS ${XPLM_SDK_ROOT}/Libraries/Win)

message(STATUS "PROJECT_SOURCE_DIR:"  ${PROJECT_SOURCE_DIR})
message(STATUS "XPLM_SDK_ROOT:"  ${XPLM_SDK_ROOT})
message(STATUS "XPLM_SDK_ROOT_HEADER:"  ${XPLM_SDK_ROOT_HEADER})
message(STATUS "XPLM_SDK_ROOT_HEADER_WIDGET:"  ${XPLM_SDK_ROOT_HEADER_WIDGET})
message(STATUS "XPLM_SDK_ROOT_HEADER_WRAPPER:"  ${XPLM_SDK_ROOT_HEADER_WRAPPER})
message(STATUS "XPLM_SDK_ROOT_HEADER_XPLM:"  ${XPLM_SDK_ROOT_HEADER_XPLM})
message(STATUS "XPLM_SDK_LIBS:"  ${XPLM_SDK_LIBS})

SET(OPENAL_ROOT "${PROJECT_SOURCE_DIR}/external/OpenAL")
SET(OPENAL_INCLUDE_DIR "${OPENAL_ROOT}/include")
SET(OPENAL_LIB_DIR "${OPENAL_ROOT}/libs/Win64")

message(STATUS "OPENAL_LIB_DIR:"  ${OPENAL_LIB_DIR})

SET(LUA_ROOT ${PROJECT_SOURCE_DIR}/external/lua-5.3.5/)
SET(LUA_SRC ${LUA_ROOT}/src)

add_definitions(-DSIMDATA_EXPORTS)
add_definitions(-DIBM=1)
add_definitions(-DXPLM200=1)
add_definitions(-DXPLM300=1)
add_definitions(-DXPLM301=1)
add_definitions(-DXPLM210=1)

#SET(GLUT_ROOT ${PROJECT_SOURCE_DIR}/external/glut_win64/)
#SET(GLUT_INCLUDE_DIR ${GLUT_ROOT}/include)
#SET(GLUT_LIB_DIR ${GLUT_ROOT}/lib)

SET(GLM_ROOT ${PROJECT_SOURCE_DIR}/external/glm-0.9.9.3)
SET(SDL_ROOT ${PROJECT_SOURCE_DIR}/external/SDL2-2.0.9)
SET(GLEW_ROOT ${PROJECT_SOURCE_DIR}/external/glew-2.1.0)

include_directories(
    ${GLM_ROOT}
    ${GLEW_ROOT}/include
    ${SDL_ROOT}/include
)

link_directories(
    ${SDL_ROOT}/lib/x64
    ${GLEW_ROOT}/lib/Release/x64
)

include_directories(${XPLM_SDK_ROOT_HEADER_WIDGET} ${XPLM_SDK_ROOT_HEADER_WRAPPER} ${XPLM_SDK_ROOT_HEADER_XPLM} ${OPENAL_INCLUDE_DIR} ${LUA_SRC} src)
link_directories(${XPLM_SDK_LIBS})
link_directories(${OPENAL_LIB_DIR})

link_directories(${GLUT_LIB_DIR})

add_subdirectory(${LUA_ROOT})
add_subdirectory(experimental)
add_subdirectory(src)

